--- a/home/templates/create.html
+++ b/home/templates/create.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Create{% endblock %}
+{% block body %}
     <h1>이름 : {{ nickname }}</h1>
     <h1>비밀번호 : {{ pwd }}</h1>
-</body>
-</html>
+{% endblock %}
