--- a/home/templates/ping.html
+++ b/home/templates/ping.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Ping</title>
-</head>
-<body>
+{% extends 'base.html' %}
+{% block title %}Ping{% endblock %}
+{% block body %}
     <form action="/home/pong">
         <input type="text" name="data" /> 
         <input type="submit" value="제출" /> 
     </form>
-</body>
-</html>
+{% endblock %}
