--- a/utilities/templates/utilities/index.html
+++ b/utilities/templates/utilities/index.html
@@ -2,4 +2,12 @@
 {% block title %}Utilities{% endblock %}
 {% block body %}
     <h1>Utilities</h1>
+    <ul>
+        <li><a href="bye">우리 헤어지는 시간 출력하기</a></li>
+        <li><a href="graduation">우리 1학기 졸업시간까지 남은 날짜 출력하기</a></li>
+        <li><a href="imagepick">Lorem Picsum 활용하여 랜덤 이미지 출력하기</a></li>
+        <li><a href="today">오늘 시간 및 날씨 정보 알려주기(지금 살고 있는 기준으로</a></li>
+        <li><a href="ascii_new">ascii art를 변환을 위한 text, font 입력받기</a></li>
+        <li><a href="original">영어 번역을 위한 한국어 입력받기</a></li>
+    </ul>
 {% endblock %}
